force-app/main/default/objects/copado__Test_Run_Step__c/fields/copado__Action_Description__c.field-meta.xml
<CustomField>
    <fullName>copado__Action_Description__c</fullName>
    <formula>copado__Script_Step__r.copado__Action_Description__c</formula>
    <label>Action/Description</label>
    <type>Text</type>
</CustomField>