force-app/main/default/objects/copado__Test_Run_Step__c/fields/copado__Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>copado__Expected_Result__c</fullName>
    <formula>copado__Script_Step__r.copado__Expected_Result__c</formula>
    <label>Expected Result</label>
    <type>Text</type>
</CustomField>