force-app/main/default/objects/copado__Test_Run_Step__c/fields/copado__Guidance_notes__c.field-meta.xml
<CustomField>
    <fullName>copado__Guidance_notes__c</fullName>
    <formula>copado__Script_Step__r.copado__Guidance_notes__c</formula>
    <label>Guidance notes</label>
    <type>Text</type>
</CustomField>