force-app/main/default/objects/copado__Test_Run_Step__c/fields/copado__Order__c.field-meta.xml
<CustomField>
    <fullName>copado__Order__c</fullName>
    <formula>copado__Script_Step__r.copado__Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>