force-app/main/default/objects/copado__Test_Run_Step__c/fields/copado__Script_Step__c.field-meta.xml
<CustomField>
    <fullName>copado__Script_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Script Step</label>
    <referenceTo>copado__Test_Script_Step__c</referenceTo>
    <relationshipLabel>Test Run Steps</relationshipLabel>
    <relationshipName>Test_Script_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>